# QRab

./: CMakeLists.txt  README.md  make-src.sh  qrab.qrc
icons/: info.plist  qrab-icon.rc  qrab.desktop  qrab.icns
lang/: qrab_pl.qm  qrab_pl.ts  qrab_xx.ts
src/: main.cpp  tgrabqr.cpp  tgrabqr.h
src/qml/: AboutPage.qml  AdjustDialog.qml  GrabPage.qml  LinkText.qml  Main.qml  NavItem.qml  QRabSettings.qml  ReplaceList.qml  SettingsPage.qml
